--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
+title: Welcome To My Projects
+description: Here you will find projects and labs that i have worked on, or am working on to further my eeducation on cybersecurity.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
