--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Welcome To My Projects
-description: Here you will find projects and labs that i have worked on, or am working on to further my eeducation on cybersecurity.
+description: Here you will find projects and labs that I have worked on to further my education on cybersecurity.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
